--- a/style.css
+++ b/style.css
@@ -1,11 +1,53 @@
-.header {
-    font-size: x-large;
-}
-
-body {
-    margin-bottom: 5%;
-}
-
-.paragrafo {
+.title {
+    font-size: 40px;
     text-align: center;
+    font-family: Jaro, sans-serif;
+    background-color: bisque;
+    border-bottom: 2px solid gray ;
+}
+
+.headings {
+    text-align: center;
+    font-family: Oswald, sans-serif;
+    font-size: 20px;
+    background-color: #fff0de;
+    border-bottom: 2px solid gray ;
+}
+
+.content {
+    background-color: #fffbf7;
+    border-bottom: 2px solid gray ;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #fff0de;
+    padding-right: 100%;
+    border-top: 2px solid gray;
+}
+
+
+main {
+    background-color: #fffbf7;
+    padding-bottom: 20%;
+}
+
+
+h2 {
+    font-family: Jaro, sans-serif;
+    text-align: center;
+}
+
+h4 {
+    font-family: Jaro, sans-serif;
+}
+
+.formulario {
+    text-align: center;
+}
+
+label {
+    font-family: Oswald, sans-serif;
+    font-size: 20px;
 }
