--- a/style.css
+++ b/style.css
@@ -75,3 +75,17 @@ h4 {
     background-color:  #ced4da;
     border-bottom: 2px solid white;
 }
+
+label {
+    font-family: Oswald, sans-serif;
+    font-size: 22px;
+    justify-content: center;
+}
+
+.mainform {
+    border-bottom: 2px solid white;
+}
+
+.inputform {
+    padding: 30px;
+}
